seaqt/QtWebKit/gen_qwebkitplatformplugin.h

class QColor;
class QFont;
class QMetaObject;
class QRect;
class QUrl;
class QWebNotificationData;
class QWebNotificationPresenter;
class QWebSelectData;
class QWebSelectMethod;
typedef QWebSpellChecker::GrammarDetail QWebSpellChecker__GrammarDetail;
typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QUrl QUrl;
typedef struct QWebKitPlatformPlugin QWebKitPlatformPlugin;
typedef struct QWebNotificationData QWebNotificationData;
typedef struct QWebNotificationPresenter QWebNotificationPresenter;
typedef struct QWebSelectData QWebSelectData;
typedef struct QWebSelectMethod QWebSelectMethod;
typedef struct QWebSpellChecker QWebSpellChecker;
typedef struct QWebSpellChecker__GrammarDetail QWebSpellChecker__GrammarDetail;
void QWebSelectMethod_connect_selectItem(QWebSelectMethod* self, intptr_t slot, void (*callback)(intptr_t, int, bool, bool), void (*release)(intptr_t));
void QWebSelectMethod_connect_didHide(QWebSelectMethod* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWebNotificationPresenter_connect_notificationClosed(QWebNotificationPresenter* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWebNotificationPresenter_connect_notificationClicked(QWebNotificationPresenter* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
const QMetaObject* QWebSpellChecker_staticMetaObject();
void QWebSpellChecker_delete(QWebSpellChecker* self);
bool QWebKitPlatformPlugin_supportsExtension(const QWebKitPlatformPlugin* self, int param1);
QObject* QWebKitPlatformPlugin_createExtension(const QWebKitPlatformPlugin* self, int param1);
void QWebKitPlatformPlugin_operatorAssign(QWebKitPlatformPlugin* self, QWebKitPlatformPlugin* param1);
void QWebKitPlatformPlugin_delete(QWebKitPlatformPlugin* self);
QWebSpellChecker__GrammarDetail* QWebSpellChecker__GrammarDetail_new(QWebSpellChecker__GrammarDetail* param1);
void QWebSpellChecker__GrammarDetail_operatorAssign(QWebSpellChecker__GrammarDetail* self, QWebSpellChecker__GrammarDetail* param1);
void QWebSpellChecker__GrammarDetail_delete(QWebSpellChecker__GrammarDetail* self);