seaqt/QtWebKit/gen_qwebkitplatformplugin.nim

proc fcQWebSpellChecker_staticMetaObject(): pointer {.importc: "QWebSpellChecker_staticMetaObject".}
proc fcQWebSpellChecker_delete(self: pointer) {.importc: "QWebSpellChecker_delete".}
proc fcQWebKitPlatformPlugin_supportsExtension(self: pointer, param1: cint): bool {.importc: "QWebKitPlatformPlugin_supportsExtension".}
proc fcQWebKitPlatformPlugin_createExtension(self: pointer, param1: cint): pointer {.importc: "QWebKitPlatformPlugin_createExtension".}
proc fcQWebKitPlatformPlugin_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebKitPlatformPlugin_operatorAssign".}
proc fcQWebKitPlatformPlugin_delete(self: pointer) {.importc: "QWebKitPlatformPlugin_delete".}
proc fcQWebSpellCheckerGrammarDetail_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebSpellChecker__GrammarDetail_operatorAssign".}
proc fcQWebSpellCheckerGrammarDetail_new(param1: pointer): ptr cQWebSpellCheckerGrammarDetail {.importc: "QWebSpellChecker__GrammarDetail_new".}
proc fcQWebSpellCheckerGrammarDetail_delete(self: pointer) {.importc: "QWebSpellChecker__GrammarDetail_delete".}

proc itemType*(self: gen_qwebkitplatformplugin_types.QWebSelectData, param1: cint): cint =
  cint(fcQWebSelectData_itemType(self.h, param1))

proc itemText*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): string =
  let v_ms = fcQWebSelectData_itemText(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc itemToolTip*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): string =
  let v_ms = fcQWebSelectData_itemToolTip(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc itemIsEnabled*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): bool =
  fcQWebSelectData_itemIsEnabled(self.h, index)

proc itemIsSelected*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): bool =
  fcQWebSelectData_itemIsSelected(self.h, index)

proc itemCount*(self: gen_qwebkitplatformplugin_types.QWebSelectData, ): cint =
  fcQWebSelectData_itemCount(self.h)

proc multiple*(self: gen_qwebkitplatformplugin_types.QWebSelectData, ): bool =
  fcQWebSelectData_multiple(self.h)

proc backgroundColor*(self: gen_qwebkitplatformplugin_types.QWebSelectData, ): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQWebSelectData_backgroundColor(self.h))

proc foregroundColor*(self: gen_qwebkitplatformplugin_types.QWebSelectData, ): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQWebSelectData_foregroundColor(self.h))

proc itemBackgroundColor*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQWebSelectData_itemBackgroundColor(self.h, index))

proc itemForegroundColor*(self: gen_qwebkitplatformplugin_types.QWebSelectData, index: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQWebSelectData_itemForegroundColor(self.h, index))

proc operatorAssign*(self: gen_qwebkitplatformplugin_types.QWebSelectData, param1: gen_qwebkitplatformplugin_types.QWebSelectData): void =
  fcQWebSelectData_operatorAssign(self.h, param1.h)

proc delete*(self: gen_qwebkitplatformplugin_types.QWebSelectData) =
  fcQWebSelectData_delete(self.h)
proc metaObject*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWebSelectMethod_metaObject(self.h))

proc metacast*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, param1: cstring): pointer =
  fcQWebSelectMethod_metacast(self.h, param1)

proc metacall*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, param1: cint, param2: cint, param3: pointer): cint =
  fcQWebSelectMethod_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring): string =
  let v_ms = fcQWebSelectMethod_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring): string =
  let v_ms = fcQWebSelectMethod_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc show*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, param1: gen_qwebkitplatformplugin_types.QWebSelectData): void =
  fcQWebSelectMethod_show(self.h, param1.h)

proc hide*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, ): void =
  fcQWebSelectMethod_hide(self.h)

proc setGeometry*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, geometry: gen_qrect_types.QRect): void =
  fcQWebSelectMethod_setGeometry(self.h, geometry.h)

proc setFont*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, font: gen_qfont_types.QFont): void =
  fcQWebSelectMethod_setFont(self.h, font.h)

proc selectItem*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, index: cint, allowMultiplySelections: bool, shift: bool): void =
  fcQWebSelectMethod_selectItem(self.h, index, allowMultiplySelections, shift)

type QWebSelectMethodselectItemSlot* = proc(index: cint, allowMultiplySelections: bool, shift: bool)
proc miqt_exec_callback_cQWebSelectMethod_selectItem(slot: int, index: cint, allowMultiplySelections: bool, shift: bool) {.exportc: "miqt_exec_callback_QWebSelectMethod_selectItem".} =
  let nimfunc = cast[ptr QWebSelectMethodselectItemSlot](cast[pointer](slot))
  let slotval1 = index

  let slotval2 = allowMultiplySelections

  let slotval3 = shift

  nimfunc[](slotval1, slotval2, slotval3)

proc onselectItem*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, slot: QWebSelectMethodselectItemSlot) =
  var tmp = new QWebSelectMethodselectItemSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWebSelectMethod_connect_selectItem(self.h, cast[int](addr tmp[]))

proc didHide*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, ): void =
  fcQWebSelectMethod_didHide(self.h)

type QWebSelectMethoddidHideSlot* = proc()
proc miqt_exec_callback_cQWebSelectMethod_didHide(slot: int) {.exportc: "miqt_exec_callback_QWebSelectMethod_didHide".} =
  let nimfunc = cast[ptr QWebSelectMethoddidHideSlot](cast[pointer](slot))
  nimfunc[]()

proc ondidHide*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod, slot: QWebSelectMethoddidHideSlot) =
  var tmp = new QWebSelectMethoddidHideSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWebSelectMethod_connect_didHide(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring, c: cstring): string =
  let v_ms = fcQWebSelectMethod_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQWebSelectMethod_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring, c: cstring): string =
  let v_ms = fcQWebSelectMethod_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQWebSelectMethod_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc staticMetaObject*(_: type gen_qwebkitplatformplugin_types.QWebSelectMethod): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWebSelectMethod_staticMetaObject())
proc delete*(self: gen_qwebkitplatformplugin_types.QWebSelectMethod) =
  fcQWebSelectMethod_delete(self.h)
proc title*(self: gen_qwebkitplatformplugin_types.QWebNotificationData, ): string =
  let v_ms = fcQWebNotificationData_title(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc message*(self: gen_qwebkitplatformplugin_types.QWebNotificationData, ): string =
  let v_ms = fcQWebNotificationData_message(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc iconUrl*(self: gen_qwebkitplatformplugin_types.QWebNotificationData, ): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQWebNotificationData_iconUrl(self.h))

proc openerPageUrl*(self: gen_qwebkitplatformplugin_types.QWebNotificationData, ): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQWebNotificationData_openerPageUrl(self.h))

proc operatorAssign*(self: gen_qwebkitplatformplugin_types.QWebNotificationData, param1: gen_qwebkitplatformplugin_types.QWebNotificationData): void =
  fcQWebNotificationData_operatorAssign(self.h, param1.h)

proc delete*(self: gen_qwebkitplatformplugin_types.QWebNotificationData) =
  fcQWebNotificationData_delete(self.h)
proc metaObject*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWebNotificationPresenter_metaObject(self.h))

proc metacast*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, param1: cstring): pointer =
  fcQWebNotificationPresenter_metacast(self.h, param1)

proc metacall*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, param1: cint, param2: cint, param3: pointer): cint =
  fcQWebNotificationPresenter_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qwebkitplatformplugin_types.QWebNotificationPresenter, s: cstring): string =
  let v_ms = fcQWebNotificationPresenter_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebkitplatformplugin_types.QWebNotificationPresenter, s: cstring): string =
  let v_ms = fcQWebNotificationPresenter_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc showNotification*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, param1: gen_qwebkitplatformplugin_types.QWebNotificationData): void =
  fcQWebNotificationPresenter_showNotification(self.h, param1.h)

proc notificationClosed*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, ): void =
  fcQWebNotificationPresenter_notificationClosed(self.h)

type QWebNotificationPresenternotificationClosedSlot* = proc()
proc miqt_exec_callback_cQWebNotificationPresenter_notificationClosed(slot: int) {.exportc: "miqt_exec_callback_QWebNotificationPresenter_notificationClosed".} =
  let nimfunc = cast[ptr QWebNotificationPresenternotificationClosedSlot](cast[pointer](slot))
  nimfunc[]()

proc onnotificationClosed*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, slot: QWebNotificationPresenternotificationClosedSlot) =
  var tmp = new QWebNotificationPresenternotificationClosedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWebNotificationPresenter_connect_notificationClosed(self.h, cast[int](addr tmp[]))

proc notificationClicked*(self: gen_qwebkitplatformplugin_types.QWebNotificationPresenter, ): void =
  fcQWebNotificationPresenter_notificationClicked(self.h)

type QWebNotificationPresenternotificationClickedSlot* = proc()
proc miqt_exec_callback_cQWebNotificationPresenter_notificationClicked(slot: int) {.exportc: "miqt_exec_callback_QWebNotificationPresenter_notificationClicked".} =
  let nimfunc = cast[ptr QWebNotificationPresenternotificationClickedSlot](cast[pointer](slot))
  nimfunc[]()
